<resources>
    <string name="app_name">SimpleExpenseManager</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD</string>
    <string name="create">CREATE</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="e_mail">E-MAIL</string>
    <string name="week">WEEK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="month">month</string>
    <string name="setting">setting</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="_2018">2018</string>
    <string name="current_balance">Current Balance</string>
    <string name="add_expense">ADD EXPENSE</string>
    <string name="transaction">Transaction</string>
    <string name="tue">TUE</string>
    <string name="_6">6</string>
    <string name="march">March</string>
    <string name="add_income">ADD INCOME</string>
    <string name="name">name</string>
    <string name="save">SAVE</string>
    <string name="amount">amount</string>
    <string name="select_date">Select Date</string>
    <string name="settingTitle">SETTING</string>
    <string name="budget">Budget</string>
    <string name="of_budget">% of Budget</string>
</resources>
