<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hi.simpleexpensemanager.IncomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_marginTop="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_income"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_create_black_24dp"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:hint="@string/name"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#1a1a1a" />

        <EditText
            android:id="@+id/amountText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:drawableStart="@drawable/ic_attach_money_black_24dp"
            android:hint="@string/amount"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#1a1a1a" />

        <Spinner
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/incomeSpinner"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:id="@+id/selectDate"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/saveIncomeButton"/>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
