<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hi.simpleexpensemanager.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_your_account"
                android:textColor="#1a1a1a"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#1a1a1a"
                    android:id="@+id/idText"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@color/colorGray"
                    android:text="CHECK"
                    android:layout_gravity="center"
                    android:id="@+id/validateButton"
                    android:textColor="#000000"/>
            </LinearLayout>

            <EditText
                android:inputType="textPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#1a1a1a"
                android:id="@+id/passwordText"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#1a1a1a"
                android:id="@+id/emailText"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="@color/colorPrimaryDark"
                android:text="@string/create"
                android:layout_marginTop="70dp"
                android:layout_gravity="center"
                android:id="@+id/registerButton"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>